--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ username: samanyougarg #github username
 repo: hanuman #github repository
 branch: master #branch
 relative_source: ../hanuman/ #source directory
-destination: ../hanuman-pages/ #destination directory
+destination: ./hanuman-pages/ #destination directory
 production_url:  https://samanyougarg.com/
 source_url:  https://github.com/samanyougarg/hanuman #source repository url
 
