--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ cover: assets/images/radhakrishna.jpg
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
 baseurl: "/" # the subpath of your site, e.g. /blog/ or / for root
-url: "" # the base hostname & protocol for your site
+url: "https://www.hrmeal.com" # the base hostname & protocol for your site
 
 pagination:
 
