--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ username: hrmeal #github username
 repo: hrmeal.github.io #github repository
 branch: master #branch
 relative_source: ../hrmeal.github.io/ #source directory
-destination: ./hanuman-pages/ #destination directory
+destination: ./_site/ #destination directory
 production_url:  hrmeal.com
 source_url:  https://github.com/hrmeal/hrmeal.github.io #source repository url
 
