--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: hrmeal/hrmeal
   branch: master
   site_domain: www.hrmeal.com
+publish_mode: editorial_workflow
 media_folder: "assets/images"
 collections:
   - label: "Posts"
