--- a/admin/config.yml
+++ b/admin/config.yml
@@ -14,4 +14,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Date", name: "date", widget: "date", default: ""}
+      - {label: "Tags", name: "tags", widget: "string", default: ""}
+      - {label: "Tags", name: "tags", widget: "string", default: "Tanya Vo"}
       - {label: "Body", name: "body", widget: "markdown"}
